crates/captval/tests/ui/compilefail/captcha_not_identified.rs
use captval::Captval;

#[derive(Captval)]
struct Test {
    Captval: String,
}

fn main() {
    println!("Super!");
}
